--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>The Cancer Sutra</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/animate.css"></script>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></script>
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>
