--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
 				<img src="positions/gif/2.gif">
-				<div class="detail container" data-position="2">
+				<div class="detail" data-position="2">
 					<div class="row">
-					<img class="col-md-6 detail-image" src="positions/gif/2.gif">
-					<div class="col-md-6 detail-text">
-					<h2>Split-Screening</h2>
-						<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
-						<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
-						<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
-						<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
-					</div>
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/gif/2.gif">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
+						</div>
 					</div>
 				</div>
 			</div>
