fancy box QA and mobile menu

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<link rel="stylesheet" href="css/app.css"></script>
 </head>
 
-<body class="intro">
+<body>
 	<div class="container">
+		<div class="device-menu">
+			<a class="nav-toggle" href="#"><span></span></a>
+		</div>
 		<nav class="row">
 			<div data-filter-type="cancer-type" class="col-md-6 filter cancer-type">
 				<h3>Filter by Cancer Type</h3>
