menu drawer revisions, now using show/hide instead of css3 slideDown

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<div class="device-menu">
-			<a class="nav-toggle" href="#"><span></span></a>
+			<a class="menu-toggle" href="#"><span></span></a>
 		</div>
 		<nav class="row">
 			<div data-filter-type="cancer-type" class="col-md-6 filter cancer-type">
