add svg layers (#s 2 and 7 are not compressing due to non-vector elements)

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 		</header>
 		<div class="cancer-sutra opacity0">
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position1 ff">
-				<img src="positions/gif/1.gif">
+				<img src="positions/svg/1.svg">
 				<div class="detail">test</div>
 			</div>
-			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
-				<img src="positions/gif/2.gif">
+			<!--<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
+				<img src="positions/svg/2.svg">
 				<div class="detail" data-position="2">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
-							<img src="positions/gif/2.gif">
+							<img src="positions/svg/2.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
 							<h2>Split-Screening</h2>
@@ -58,45 +58,45 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>-->
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position3 mf">
-				<img src="positions/gif/3.gif">
+				<img src="positions/svg/3.svg">
 				<div class="detail"></div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position4 ff">
-				<img src="positions/gif/4.gif">
+				<img src="positions/svg/4.svg">
 				<div class="detail"></div>
 			</div>
 			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position5 mm">
-				<img src="positions/gif/5.gif">
+				<img src="positions/svg/5.svg">
 				<div class="detail"></div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position6 ff">
-				<img src="positions/gif/6.gif">
+				<img src="positions/svg/6.svg">
 				<div class="detail"></div>
 			</div>
-			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position7 mm">
-				<img src="positions/gif/7.gif">
+			<!--<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position7 mm">
+				<img src="positions/svg/7.svg">
 				<div class="detail"></div>
-			</div>
+			</div>-->
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position8 ff">
-				<img src="positions/gif/8.gif">
+				<img src="positions/svg/8.svg">
 				<div class="detail"></div>
 			</div>
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position9 mf">
-				<img src="positions/gif/9.gif">
+				<img src="positions/svg/9.svg">
 				<div class="detail"></div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position10 ff">
-				<img src="positions/gif/10.gif">
+				<img src="positions/svg/10.svg">
 				<div class="detail"></div>
 			</div>
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position11 mf">
-				<img src="positions/gif/11.gif">
+				<img src="positions/svg/11.svg">
 				<div class="detail"></div>
 			</div>
 			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position12 mm">
-				<img src="positions/gif/12.gif">
+				<img src="positions/svg/12.svg">
 				<div class="detail"></div>
 			</div>
 		</div>
