sticky menu with appearing title on scroll

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
 	<div class="container">
+		<nav>
 		<div class="device-menu">
 			<a class="menu-toggle" href="#"><span></span></a>
 		</div>
-		<nav class="row">
+		<div class="filters row">
 			<div data-filter-type="cancer-type" class="col-md-6 filter cancer-type">
 				<h3>Filter by Cancer Type</h3>
 				<ul class="uppercase">
@@ -32,6 +33,7 @@
 					<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
 				</ul>
 			</div>
+		</div>
 		</nav>
 		<header class="animated fadeIn">
 			<h1>The Cancer Sutra</h1>
