massive sticky and showy improvements, with delay on resize

--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container wrapper">
 		<nav>
-		<div class="device-menu">
-			<a class="menu-toggle" href="#"><span></span></a>
-		</div>
-		<div class="filters row">
-			<div data-filter-type="cancer-type" class="col-md-6 filter cancer-type">
-				<h3>Filter by Cancer Type</h3>
-				<ul class="uppercase">
-					<li><a href data-filter="breast" data-toggle="off">Breast</a></li>
-					<li><a href data-filter="testicular" data-toggle="off">Testicular</a></li>
-					<li><a href data-filter="skin" data-toggle="off">Skin</a></li>
-					<li><a href data-filter="prostate" data-toggle="off">Prostate</a></li>
-				</ul>
+			<div class="device-menu">
+				<a class="menu-toggle" href="#"><span></span></a>
 			</div>
-			<div data-filter-type="partnership" class="col-md-6 filter partnership">
-				<h3>Filter by Partnership</h3>
-				<ul class="uppercase">
-					<li><a href data-filter="mm" data-toggle="off" class="test">Male/Male</a></li>
-					<li><a href data-filter="ff" data-toggle="off">Female/Female</a></li>
-					<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
-				</ul>
+			<div class="filters row">
+				<div data-filter-type="cancer-type" class="col-md-6 filter cancer-type">
+					<h3>Filter by Cancer Type</h3>
+					<ul class="uppercase">
+						<li><a href data-filter="breast" data-toggle="off">Breast</a></li>
+						<li><a href data-filter="testicular" data-toggle="off">Testicular</a></li>
+						<li><a href data-filter="skin" data-toggle="off">Skin</a></li>
+						<li><a href data-filter="prostate" data-toggle="off">Prostate</a></li>
+					</ul>
+				</div>
+				<div data-filter-type="partnership" class="col-md-6 filter partnership">
+					<h3>Filter by Partnership</h3>
+					<ul class="uppercase">
+						<li><a href data-filter="mm" data-toggle="off" class="test">Male/Male</a></li>
+						<li><a href data-filter="ff" data-toggle="off">Female/Female</a></li>
+						<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
+					</ul>
+				</div>
 			</div>
-		</div>
 		</nav>
 		<header class="animated fadeIn">
 			<h1>The Cancer Sutra</h1>
