begin tablet menu, add hammer.js for swipe gesture recognition

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="container wrapper">
+	<div class="wrapper container-fluid">
 		<nav>
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
@@ -122,6 +122,7 @@
 	</div>
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="js/imagesloaded.pkgd.min.js"></script>
+<script src="js/hammer.min.js"></script>
 <script src="js/isotope.pkgd.min.js"></script>
 <script src="js/assets.js"></script>
 <script src="fancybox/jquery.fancybox.pack.js"></script>
