--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html class="no-js">
 <head>
 	<title>The Cancer Sutra</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,6 +8,11 @@
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></script>
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>
 	<link rel="stylesheet" href="css/app.css"></script>
+	<!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.js"></script>
+    <![endif]-->
+	<script src="js/modernizr-latest.js"></script>
 </head>
 
 <body class="loading">
@@ -134,13 +140,14 @@
 			</div>
 		</footer>
 	</div>
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="js/imagesloaded.pkgd.min.js"></script>
-<script src="js/hammer.min.js"></script>
-<script src="js/isotope.pkgd.min.js"></script>
-<script src="js/assets.js"></script>
-<script src="fancybox/jquery.fancybox.pack.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/app.js"></script>
+	<script src="js/jquery-2.1.1.min.js"></script>
+	<script src="js/imagesloaded.pkgd.min.js"></script>
+	<script src="js/hammer.min.js"></script>
+	<script src="js/isotope.pkgd.min.js"></script>
+	<script src="js/assets.js"></script>
+	<script src="fancybox/jquery.fancybox.pack.js"></script>
+	<!--<script src="js/wow.min.js"></script>-->
+	<script src="js/mom.min.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
