fixed sticky filters menu, css updates, slimmed down intro sequence, added placeholder markup for each position

--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
 			</div>
-			<div class="filters row">
-				<div data-filter-type="cancer-type" class="col-md-6 filter cancer-type">
-					<h3>Filter by Cancer Type</h3>
-					<ul class="uppercase">
-						<li><a href data-filter="breast" data-toggle="off">Breast</a></li>
-						<li><a href data-filter="testicular" data-toggle="off">Testicular</a></li>
-						<li><a href data-filter="skin" data-toggle="off">Skin</a></li>
-						<li><a href data-filter="prostate" data-toggle="off">Prostate</a></li>
-					</ul>
-				</div>
-				<div data-filter-type="partnership" class="col-md-6 filter partnership">
-					<h3>Filter by Partnership</h3>
-					<ul class="uppercase">
-						<li><a href data-filter="mm" data-toggle="off" class="test">Male/Male</a></li>
-						<li><a href data-filter="ff" data-toggle="off">Female/Female</a></li>
-						<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
-					</ul>
-				</div>
-			</div>
 		</nav>
+		<div class="filters row">
+			<div data-filter-type="cancer-type" class="col-md-6 filter cancer-type">
+				<h3>Filter by Cancer Type</h3>
+				<ul class="uppercase">
+					<li><a href data-filter="breast" data-toggle="off">Breast</a></li>
+					<li><a href data-filter="testicular" data-toggle="off">Testicular</a></li>
+					<li><a href data-filter="skin" data-toggle="off">Skin</a></li>
+					<li><a href data-filter="prostate" data-toggle="off">Prostate</a></li>
+				</ul>
+			</div>
+			<div data-filter-type="partnership" class="col-md-6 filter partnership">
+				<h3>Filter by Partnership</h3>
+				<ul class="uppercase">
+					<li><a href data-filter="mm" data-toggle="off" class="test">Male/Male</a></li>
+					<li><a href data-filter="ff" data-toggle="off">Female/Female</a></li>
+					<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
+				</ul>
+			</div>
+		</div>
 		<header class="animated fadeIn">
 			<h1>The Cancer Sutra</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -64,9 +64,9 @@
 				<img src="positions/svg/1.svg">
 				<div class="detail">test</div>
 			</div>
-			<!--<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
+			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
 				<img src="positions/svg/2.svg">
-				<div class="detail" data-position="2">
+				<div class="detail detail-image-horizontal" data-position="2">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/2.svg">
@@ -80,46 +80,156 @@
 						</div>
 					</div>
 				</div>
-			</div>-->
+			</div>
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position3 mf">
 				<img src="positions/svg/3.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="3">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/3.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position4 ff">
 				<img src="positions/svg/4.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="4">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/4.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position5 mm">
 				<img src="positions/svg/5.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="5">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/5.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position6 ff">
 				<img src="positions/svg/6.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="6">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/6.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<!--<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position7 mm">
 				<img src="positions/svg/7.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="7">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/7.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>-->
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position8 ff">
 				<img src="positions/svg/8.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="8">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/8.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position9 mf">
 				<img src="positions/svg/9.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="9">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/9.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position10 ff">
 				<img src="positions/svg/10.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="11">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/11.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position11 mf">
 				<img src="positions/svg/11.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="12">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/12.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position12 mm">
 				<img src="positions/svg/12.svg">
-				<div class="detail"></div>
+				<div class="detail" data-position="2">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/2.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2></h2>
+							<p><p>
+							<p class="just-the-tip">Just the Tip:<br></p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<footer class="row uppercase">
@@ -146,8 +256,6 @@
 	<script src="js/isotope.pkgd.min.js"></script>
 	<script src="js/assets.js"></script>
 	<script src="fancybox/jquery.fancybox.pack.js"></script>
-	<!--<script src="js/wow.min.js"></script>-->
-	<script src="js/mom.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
