added alt svg, QA tablet menu, change menu markup, re-add css3 slide in to both menus, set tablet threshold at 480px

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>The Cancer Sutra</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/animate.css"></script>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></script>
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>
@@ -17,7 +17,7 @@
 
 <body class="loading">
 	<div class="wrapper container-fluid">
-		<nav>
+		<nav class="row">
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
 			</div>
@@ -41,7 +41,7 @@
 				</ul>
 			</div>
 		</div>
-		<header class="animated fadeIn">
+		<header class="animated fadeIn row">
 			<h1>The Cancer Sutra</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 		</header>
@@ -65,11 +65,11 @@
 				<div class="detail">test</div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
-				<img src="positions/svg/2.svg">
+				<img src="positions/svg/2.alt.svg">
 				<div class="detail detail-image-horizontal" data-position="2">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
-							<img src="positions/svg/2.svg">
+							<img src="positions/svg/2.alt.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
 							<h2>Split-Screening</h2>
